--- a/style.css
+++ b/style.css
@@ -1,7 +1,52 @@
 <style>
 body {
-        font-family: 'OpenSans-Regular.ttf';
+    font-family: 'OpenSans-Regular.ttf';
+    background: linear-gradient(45deg, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+    color: #000;
+    font-size: 11px;
+    text-align: center;
 }
+h1{
+    font-size: 36px;
+    color: #16a8a2;
+}
+h2{
+    font-size: 28px;
+    color: #16a8a2;
+    padding: 5px;
+}
+h3{
+    font-size: 20px;
+    color: #16a8a2;
+    padding: 2px;
+}
+section {
+    width: 500px;
+    margin: 30px auto;
+    padding: 20px 20px 20px 20px;
+    border-radius: 4px;
+    background: none repeat scroll 0% 0% #FFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+}
+form {
+    width: auto;
+    height: auto;
+}
+input {
+    margin: 0px 5px 10px;
+    padding: 15px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px #CCC inset, 0px 1px 0px #FFF;
+    background: none repeat scroll 0% 0% #F1F1F1;
+}
+table, th, tr, td {
+    border: solid 1px;
+    border-collapse: collapse;
+    border-color: #CCC;
+    padding: 10px;
+}
+
 .tab{
 	margin: auto;
 	border: #F50 solid 2px;
@@ -33,7 +78,7 @@ body {
         color: #6DAAF8;
         padding: 15px;
         font-weight: 700;
-        margin: auto;
+        margin: 10px;
 }
 .sb{
 margin-top: 20px;
@@ -69,7 +114,7 @@ h2,h4{color:orange;}
         border: 1px solid #54F;
         box-shadow: 3px 5px #666;
         padding: 15px;
-        margin: auto;
+        margin: 10px;
 }
 
 </style>
