--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,10 @@
 body {
     font-family: 'OpenSans-Regular.ttf';
     background: linear-gradient(45deg, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
-    background-image:url('../31_biblioteca/backindex.jpg');
+    background-image:url('../img/backindex.jpg');
     background-size: 100% 100%;
     color: #000;
     font-size: 11px;
-    text-align: center;
 }
 h1{
     font-size: 36px;
@@ -21,6 +20,9 @@ h3{
     font-size: 20px;
     color: #16a8a2;
     padding: 2px;
+}
+h2,h4{
+    color:orange;
 }
 section {
     width: 500px;
@@ -57,49 +59,26 @@ table, th, tr, td {
     padding: 10px;
 }
 
-.tab{
-	margin: auto;
-	border: #F50 solid 2px;
-	/*border-collapse: collapse;*/
-	border-spacing: 0;
+/*--- Alerts ---*/
+.alert{
+    border: 2px solid red;
+    color: red;
+    font-weight: 700;
+    text-align: center;
+    padding: 10px;
+    background-color: ghostwhite;
 }
-.c{
-	height: 20px;
-	width: 20px;
-}       
-.cb{
-	background:#000;
+.alertNULL{
+    display: none;
 }
-
-.sent{
-        background-color: #4BC5B2;
-        color: #FFF;
-        margin: auto;
-        float: right;
-        border-radius: 20px; 
-        padding: 5px;
-}
-
-.formLS{
-        width: 500px;
-        background-color: #EEE;
-        border: 2px solid #666;
-        color: #6DAAF8;
-        padding: 15px;
-        font-weight: 700;
-        margin: 10px auto;
-}
-.sb{
-    font-size: 15px;
-    margin-top: 20px;
-    height: 40px;
-    background-color: #4BC5B2;
-    color: #FFF;
-    margin-right: 0px;
-    border-radius: 20px;
+.alertOK{
+    background-color: ghostwhite;
+    border: 2px solid lightgreen;
+    color: green;
+    font-weight: 700;
+    text-align: center;
     padding: 10px;
 }
-
 .notifi{
     -webkit-border-radius: 11;
     -moz-border-radius: 11;
@@ -114,30 +93,9 @@ table, th, tr, td {
     display: inline-block;
 }
 
-.alert{
-    border: 2px solid red;
-    color: red;
-    font-weight: 700;
-    text-align: center;
-    padding: 10px;
-    background-color: ghostwhite;
-}
+/*--- --- ---*/
 
-.alertNULL{
-    display: none;
-}
-
-.alertOK{
-    background-color: ghostwhite;
-    border: 2px solid lightgreen;
-    color: green;
-    font-weight: 700;
-    text-align: center;
-    padding: 10px;
-}
-
-h2,h4{color:orange;}
-
+/*--- divs&buttons ---*/
 .div{
         width: 500px;
         background-color: whitesmoke;
@@ -147,7 +105,6 @@ h2,h4{color:orange;}
         margin: 10px auto;
         text-align: center;
 }
-
 .btn {
   -webkit-border-radius: 11;
   -moz-border-radius: 11;
@@ -160,10 +117,71 @@ h2,h4{color:orange;}
   border: solid #0ea4f5 2px;
   text-decoration: none;
   display: inline-block;
+  text-align: end;
 }
-
 .btn:hover {
   background: #e8f6ff;
   text-decoration: none;
+}
+.sb{
+    font-size: 15px;
+    margin-top: 20px;
+    height: 40px;
+    background-color: #4BC5B2;
+    color: #FFF;
+    margin-right: 0px;
+    border-radius: 20px;
+    padding: 10px;
+}
+.cartel{
+    width: 30%;
+    height: 400px;
+    border-bottom: 2px groove lightgreen;
+    margin: 20px 15px;
+    box-shadow: 0px 10px 20px whitesmoke;
+    float: left;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    background-size: 100% 100%;
+}
+.cartel > h1 {
+    margin-top: 90%;
+}
+.cartel > *{
+    color: grey;
+    padding: 7px;
+    background-color: rgba(255,255,255,0.8);
+    margin-left: 4px;
+    box-shadow: 2px 1px 9px #CCC;
+}
+.tab{
+    margin: auto;
+    border: #F50 solid 2px;
+
+    border-spacing: 0;
+}
+.c{
+    height: 20px;
+    width: 20px;
+}       
+.cb{
+    background:#000;
+}
+.sent{
+    background-color: #4BC5B2;
+    color: #FFF;
+    margin: auto;
+    float: right;
+    border-radius: 20px; 
+    padding: 5px;
+}
+.formLS{
+    width: 500px;
+    background-color: #EEE;
+    border: 2px solid #666;
+    color: #6DAAF8;
+    padding: 15px;
+    font-weight: 700;
+    margin: 10px auto;
 }
 </style>
