--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,7 @@
 <style>
+html{
+    height: 100%;
+}
 body {
     font-family: 'OpenSans-Regular.ttf';
     background: linear-gradient(45deg, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
