Exercise 38 more functionallity

--- a/38_MinimalForm/css/st.css
+++ b/38_MinimalForm/css/st.css
@@ -15,17 +15,17 @@
 /* Question list style */
 .simform ol {
 	margin: 0;
-	padding: 0;
+/*	padding: 0;*/
 	list-style: none;
 	position: relative;
 	-webkit-transition: height 0.4s;
 	transition: height 0.4s;
 	width: 100%;
-	height: 2em;
+	height: auto;
 	background-color: rgba(0,0,0,0.1);
 }
 .questions li{
-	height: inherit;
+	height: initial;
 }
 .quest{
 	height: inherit;
@@ -86,4 +86,28 @@
 	width: 3em;
 	font-weight: 700;
 	font-size: 0.4em;
+}
+
+.questinfo {
+width: calc(100%-52px);
+} 
+li > .next {
+	top: 33%;
+	position: absolute;
+}
+ul{
+	list-style: none;
+	padding: 28px 65px;
+}
+#back{
+	margin: 42px -10px;
+	transform: rotateY(180deg);
+}
+.rad{
+    width:20px;
+    height: 20px;
+}
+.check{
+    width:20px;
+    height: 20px;
 }
