fix 35 and end 38 posibles errores

--- a/38_MinimalForm/css/st.css
+++ b/38_MinimalForm/css/st.css
@@ -150,5 +150,8 @@ ul{
     text-decoration: none;
     display: inline-block;
 }
+button.notifi {
+	    background: darkslategrey;
+}
 
 /*--- --- ---*/
