38 end (+ optional fotos next commit)

--- a/38_MinimalForm/css/st.css
+++ b/38_MinimalForm/css/st.css
@@ -153,5 +153,8 @@ ul{
 button.notifi {
 	    background: darkslategrey;
 }
+button.notifi:hover {
+	    background: slategrey;
+}
 
 /*--- --- ---*/
