Revert "add 44_phpMailer"
This reverts commit f71b59ad3d4fa7543b02b258df40d93a6b72c5a7.

--- a/43_Email/style/style.css
+++ b/43_Email/style/style.css
@@ -156,7 +156,8 @@ table, th, tr, td {
 }
 .cartel > h1 {
     margin-top: 245px;
-    margin-left: inherit; 
+    margin-left: inherit;
+    border-radius-right: none; 
 }
 .cartel > *{
     border-radius: 5px;
