--- a/47_AdminMailer_NOTERMINADO/style.css
+++ b/47_AdminMailer_NOTERMINADO/style.css
@@ -16,14 +16,6 @@ h3{
 
 h2,h4{color:orange;}
 
-input {
-    margin: 0px 5px 10px;
-    padding: 15px;
-    border: 1px solid #CCC;
-    border-radius: 5px;
-    box-shadow: 0px 1px 1px #CCC inset, 0px 1px 0px #FFF;
-    background: none repeat scroll 0% 0% #F1F1F1;
-}
 table, th, tr, td {
     border: solid 1px;
     border-collapse: collapse;
@@ -54,7 +46,28 @@ ul.login li{
         font-weight: 700;
         margin: 10px auto;
 }
-.sb{
+.formLS span{
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: 300;
+    padding: 2px 10px;
+}
+.formLS div{
+    margin: 0px 5px 10px;
+}
+.formLS input{
+    padding: 10px 15px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px #CCC inset, 0px 1px 0px #FFF;
+}
+.formLS select{
+    padding: 10px 10px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px #CCC inset, 0px 1px 0px #FFF;
+}
+.formLS .sb{
     margin-top: 20px;
     height: 40px;
     background-color: #4BC5B2;
@@ -63,19 +76,26 @@ ul.login li{
     border-radius: 20px;
     padding: 10px;
 }
+.formLS .sb:hover{
+    background-color: #5DC;
+}
 
 /*--- --- ---*/
 
 /*--- DIVS ---*/
 
 .root{
-    margin-top: 20px;
     height: 30px;
     background-color: #AE58AE;
     color: #FFF;
-    margin-right: 0px;
+    margin: 0px;
     border-radius: 10px;
-    padding: 5px;  
+    padding: 5px;
+    width:24%;
+    font-variant: small-caps;
+}
+.root:hover{
+    background-color: #C7C;
 }
 
 .div{
@@ -88,7 +108,7 @@ ul.login li{
     text-align: center;
 }
 
-div.login{
+div .login{
     background: -moz-linear-gradient( bottom, blue, #0CC);
     font-family : sans-serif;
     width:auto;
@@ -100,6 +120,8 @@ div.login{
 
 .header{
     border-bottom: 1px groove linen;
+    background: url(http://www.hd-wallpapers.com/download/adidas-blue-white-stripes_1440x900_111-wide.jpg);
+    background-size: 100% 100%;
 }
 
 /*--- Alerts ---*/
@@ -218,3 +240,18 @@ padding: 10px;
     border-radius: 20px; 
     padding: 5px;
 }  
+
+ul.admin li{
+    display:Inline;
+}
+.create{
+    margin: 0;
+    border-bottom: 1px solid grey;
+    background: linen;
+}
+.create li{
+    display:Inline;
+} 
+.create .root{
+    background: yellowgreen;
+} 
